# diarios-oficiais

./: .ghc.environment.x86_64-linux-8.4.3  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  beam.json  cabal-ghcjs.project  cabal.project  concursos-publicos-site.cabal  default.nix  docker-compose.eventual.yaml  docker-compose.prod.yaml  docker-compose.simul-prod.yaml  docker-compose.yaml  docker.nix  frontend-result  hello.html  nixos-unstable.json  project.nix  release0.nix  shell.nix  shell.prod.nix  stack.yaml
.github/workflows/: main.yml
backend/: LICENSE  backend.cabal  html-SPA
backend/src/: Busca.hs  Ler.hs  Main.hs
backend/templates/: busca.hamlet  cadastro.hamlet
brdocs/test/: BrdocsSpec.hs
common/: common.cabal
common/src/: Common.hs
conf/postgresql/: pg_hba.conf  postgresql.conf
db-history/: 0000-initdb.sql  0001-criar-paragrafos.sql  0002-remover-terminodownload-status.sql  0003-postgres-portuguese-unaccent.sql  0004-remover-secoes-e-conteudo-completo.sql  0005-postgres-portuguese-unaccent-corrigido.sql  0006-novos-diarios.sql  0007-generated-tsvector-cols.sql  0008-diarios-da-uniao.sql  0009-sem-manter-arquivos.sql  0010-indicativo-de-diario-inexistente.sql
db-history-test-db/: README.md
development/tlscert/: localhost.crt  localhost.key
diarios-fetcher/src/: AwsUtils.hs  DiariosOficiais.hs
diarios-fetcher/src/Crawlers/: Campinas.hs
diarios-fetcher/src/DiariosOficiais/: Database.hs
diarios-fetcher/src/Model/: Diarios.hs
diarios-oficiais/: README.md  cabal.project.local  diarios-oficiais.cabal  initdb.sql
diarios-oficiais/app/: Main.hs
diarios-oficiais/src/: AwsUtils.hs  BeamUtils.hs  Buscador.hs  ConcursosPublicos.hs  DiariosOficiais.hs  PdfParser.hs  Zlude.hs
diarios-oficiais/src/ConcursosPublicos/: Crawling.hs  Database.hs  Xml.hs
diarios-oficiais/src/Crawlers/: Campinas.hs  Sumare.hs
diarios-oficiais/src/DiariosOficiais/: Crawling.hs  Database.hs
diarios-oficiais/src/Mail/: MailSender.hs
diarios-oficiais/src/Model/: Aprovados.hs  Diarios.hs
diarios-oficiais/src/PdfParser/: DocumentoParserInteligente.hs  Estruturas.hs  HtmlParser.hs  PandocHtmlParser.hs
env/: development.env  docker.env  local.env  production.env
env/dev/: .env  docker.env
env/dev/pebble/: key.pem  pebble-config.json
env/prod/: .env  docker.env
env/simul-prod/: .env  docker.env
env/simul-prod/pebble/: cert.pem  pebble-config.json
frontend/: frontend.cabal
frontend/src/: Main.hs
html/: index.html
nix/: docker.nix  init-env.nix  nixpkgs.nix  postgres-service.nix  reflex-platform.git  reflex-platform.git.nix  utils.nix
nix/docker/: db-history-update.nix  diarios-backend.nix  diarios-fetcher.nix  postgres-docker.nix  postgresql.nix
nix/haskell/: beam-core.nix  beam-migrate.nix  beam-postgres.nix
scripts/: aplicar-migracao.sh  bootstrap-db.sh  get-env.sh  prepare-prod-cloud-instance.sh  push-to-docker-hub.sh  run-backend-with-certbot.sh  run-certbot.sh  source-env.sh
src/: Busca.hs  Main.hs  ServantExtensions.hs
src/backend/: backend.cabal
src/backend/app/: Main.hs
src/backend/src/: Busca.hs  Ler.hs  LibMain.hs  Main.hs  ServantExtensions.hs
src/backend/test/: BasicDataSpec.hs  BuscaSpec.hs  Main.hs  SpecWithTmpPostgres.hs  TestDb.hs
src/brdocs/: brdocs.cabal
src/brdocs/src/: Brdocs.hs  Import.hs
src/brdocs/test/: BrdocsSpec.hs~
src/common/: common.cabal
src/common/src/: Api.hs  Common.hs
src/diarios-fetcher/: README.md  diarios-fetcher.cabal
src/diarios-fetcher/app/: Main.hs
src/diarios-fetcher/src/: AwsUtils.hs  BeamUtils.hs  DbUtils.hs  DbVcs.hs  DiariosOficiais.hs  Fetcher.hs  LibMain.hs  Treinar.hs
src/diarios-fetcher/src/Crawlers/: Campinas.hs  DOU.hs  DOU1.hs  Sumare.hs
src/diarios-fetcher/src/DiariosOficiais/: Crawling.hs  Database.hs  Xml.hs
src/diarios-fetcher/src/Model/: Diarios.hs
src/diarios-fetcher/src/PdfParser/: Estruturas.hs  HtmlParser.hs
src/frontend/: frontend.cabal
src/frontend/src/: BuildEnv.hs  Main.hs
templates/: cadastro.hamlet  index.hamlet  index.tpl
