name:                concursos-publicos-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ConcursosPublicosSite#readme
license:             BSD3
license-file:        LICENSE
author:              Marcelo Zabani
maintainer:          mzabani@gmail.com
copyright:           2018 Marcelo Zabani
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable concursos-publicos-site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , beam-core
                     , beam-postgres
                     , text
                     , bytestring
                     , aeson
                     , resource-pool
                     , http-api-data
                     , postgresql-simple
                     , brdocs
                     , concursos-publicos
                     , heist
                     , blaze-html
                     , servant-blaze
                     , lens
                     , binary
                     , string-conv