name:                concursos-publicos-site
version:             0.1.0.0
synopsis:            Concursos Públicos Site
homepage:            https://github.com/githubuser/ConcursosPublicosSite#readme
license:             BSD3
license-file:        LICENSE
author:              Marcelo Zabani
maintainer:          mzabani@gmail.com
copyright:           2018 Marcelo Zabani
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/ConcursosPublicos#readme>

executable concursos-publicos-site
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       ServantExtensions
                     , Busca
  build-depends:       base >= 4.7 && < 5
                     , rio
                     , wai
                     , warp
                     , servant
                     , servant-server
                     , beam-core
                     , beam-postgres
                     , text
                     , bytestring
                     , aeson
                     , resource-pool
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , postgresql-simple
                     , brdocs
                     , shakespeare
                     , concursos-publicos
                     , blaze-html
                     , servant-blaze
                     , lens
                     , binary
                     , string-conv
                     , fb
                     , safe-exceptions
                     , resourcet
                     , unliftio-core
  default-extensions: DataKinds
                    , DeriveGeneric
                    , DeriveAnyClass
                    , OverloadedStrings
                    , QuasiQuotes
                    , RecordWildCards
                    , DuplicateRecordFields
                    , TypeOperators
                    , TemplateHaskell