name:                diarios-oficiais
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/ConcursosPublicos#readme
license:             BSD3
license-file:        LICENSE
author:              Marcelo Zabani
maintainer:          mzabani@gmail.com
copyright:           2018 Marcelo Zabani
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/ConcursosPublicos#readme>

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     ConcursosPublicos
                     , ConcursosPublicos.Database
                     , Model.Diarios
                     , BeamUtils
  other-modules:       ConcursosPublicos.Xml
                     , ConcursosPublicos.Crawling
                     , Crawlers.Campinas
                     , Crawlers.Sumare
                     , PdfParser
                     , Buscador
                     , AwsUtils
                     , Mail.MailSender
                     , PdfParser.PandocHtmlParser
                     , PdfParser.DocumentoParserInteligente
                     , PdfParser.Estruturas
                     , PdfParser.HtmlParser
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , rio
                     , resourcet
                     , html-conduit
                     , xml-conduit
                     , monad-control
                     , resource-pool
                     , time
                     , http-client
                     , http-client-tls
                     , text
                     , string-conv
                     , containers
                     , conduit
                     , http-conduit
                     , conduit-extra
                     , filepath
                     , temporary
                     , cryptonite
                     , cryptonite-conduit
                     , directory
                     , typed-process
                     , postgresql-simple
                     , beam-core
                     , beam-postgres
                     , brdocs
                     , attoparsec
                     , aws
                     , mime-mail
                     , pandoc
                     , pandoc-types
                     , data-default
                     , edit-distance
                     , regex
                     , random
                     , unliftio
  default-language:    Haskell2010
  ghc-options:        -Wno-simplifiable-class-constraints
  default-extensions: OverloadedStrings
                    , ConstraintKinds
                    , MultiParamTypeClasses
                    , FlexibleInstances
                    , TypeFamilies
                    , DeriveGeneric
                    , DeriveAnyClass
                    , StandaloneDeriving
                    , RankNTypes
                    , FlexibleContexts
                    , ViewPatterns
                    , NamedFieldPuns
                    , RecordWildCards
                    , DuplicateRecordFields
                    , QuasiQuotes
                    , ScopedTypeVariables
                    , LambdaCase
                    , AllowAmbiguousTypes

executable diarios-oficiais-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -O2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -O2
  build-depends:       base
                     , diarios-oficiais
  default-language:    Haskell2010

test-suite diarios-oficiais-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , diarios-oficiais
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ConcursosPublicos
