name:                brdocs
version:             0.1.0.0
synopsis:            Projeto de parsing de identidades e outros números de registro brasileiros
description:         Please see README.md
homepage:            https://github.com/mzabani/brdocs#readme
license:             BSD3
license-file:        LICENSE
author:              Marcelo Zabani
maintainer:          mzabani@gmail.com
copyright:           2016 Marcelo Zabani
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Brdocs
  other-modules:       Import
  build-depends:       base >= 4.7 && < 5,
                       text,
                       attoparsec
  default-language:    Haskell2010
  extensions:  OverloadedStrings
               NoImplicitPrelude

test-suite brdocs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Spec.hs
  build-depends:       brdocs
                     , QuickCheck >= 2.8.1
                     , base >= 4.7 && < 5
                     , hspec >= 2.2.2
                     , text
                     , attoparsec
  default-language:    Haskell2010
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/mzabani/brdocs