name:                diarios-fetcher
version:             0.1.0.0
synopsis:            Interface web para fazer fetching e busca de conteúdo em diários oficiais
homepage:            https://github.com/mzabani/diarios-oficiais
license:             BSD3
license-file:        LICENSE
author:              Marcelo Zabani
maintainer:          mzabani@gmail.com
copyright:           2018 Marcelo Zabani
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Veja o README no Github em <https://github.com/mzabani/diarios-oficiais>

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     LibMain
                     , DiariosOficiais.Database
                     , Model.Diarios
                     , DbUtils
                     , DbVcs
  other-modules:       DiariosOficiais.Xml
                     , DiariosOficiais.Crawling
                     , Crawlers.Campinas
                     , Crawlers.Sumare
                     , Crawlers.DOU
                     , Buscador
                     , AwsUtils
                     , PdfParser.DocumentoParserInteligente
                     , PdfParser.Estruturas
                     , PdfParser.HtmlParser
                     , AwsUtils
                     , Treinar
                     , Fetcher
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , rio
                     , resourcet
                     , html-conduit
                     , xml-conduit
                     , monad-control
                     , resource-pool
                     , time
                     , http-client
                     , http-client-tls
                     , text
                     , string-conv
                     , containers
                     , conduit
                     , http-conduit
                     , conduit-extra
                     , filepath
                     , temporary
                     , connection
                     , cryptonite
                     , cryptonite-conduit
                     , directory
                     , typed-process
                     , postgresql-simple
                     , postgresql-query
                     , beam-core
                     , beam-postgres
                     , brdocs
                     , attoparsec
                     , aws
                     , mime-mail
                     , data-default
                     , edit-distance
                     , regex
                     , random
                     , unliftio
                     , unliftio-core
                     , aeson
                     , dlist
                     , blaze-markup
                     , blaze-html
                     , these
                     , monad-logger
                     , optparse-applicative
  default-language:    Haskell2010
  ghc-options:        -Wno-simplifiable-class-constraints
  default-extensions: OverloadedStrings
                    , ConstraintKinds
                    , MultiParamTypeClasses
                    , FlexibleInstances
                    , TypeFamilies
                    , DeriveGeneric
                    , DeriveAnyClass
                    , StandaloneDeriving
                    , RankNTypes
                    , FlexibleContexts
                    , ViewPatterns
                    , NamedFieldPuns
                    , RecordWildCards
                    , DuplicateRecordFields
                    , QuasiQuotes
                    , ScopedTypeVariables
                    , LambdaCase
                    , AllowAmbiguousTypes
                    , TupleSections
                    , TypeApplications
                    , BangPatterns

executable diarios-fetcher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wpartial-fields -O2
  build-depends:       base
                     , diarios-fetcher
  default-language:    Haskell2010

test-suite diarios-fetcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , diarios-fetcher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mzabani/diarios-oficiais
